[gd_scene load_steps=13 format=3 uid="uid://d0bjhea2tawvk"]

[ext_resource type="Script" path="res://Scenes/Multiplayer/network.gd" id="1_c676d"]
[ext_resource type="Script" path="res://Scenes/Multiplayer/enet.gd" id="2_idffg"]
[ext_resource type="Script" path="res://Scenes/Multiplayer/steam.gd" id="3_cj1w6"]
[ext_resource type="Script" path="res://Scenes/Multiplayer/nakama.gd" id="4_8altb"]
[ext_resource type="Script" path="res://Scenes/Multiplayer/gds.gd" id="5_xp8ec"]
[ext_resource type="Script" path="res://Scenes/Multiplayer/eos.gd" id="6_u7543"]
[ext_resource type="Script" path="res://Scenes/Multiplayer/network_mgr.gd" id="7_5wdof"]
[ext_resource type="Texture2D" uid="uid://7h6ow58neeq" path="res://Scenes/Multiplayer/godot.png" id="8_k6k0w"]
[ext_resource type="Texture2D" uid="uid://dqmtsfnswekmn" path="res://Scenes/Multiplayer/Steam.png" id="9_4e382"]
[ext_resource type="Texture2D" uid="uid://drgfd6hidllij" path="res://Scenes/Multiplayer/Nakama.png" id="10_jfr3w"]
[ext_resource type="Texture2D" uid="uid://pambvh63m1o4" path="res://Scenes/Multiplayer/GDSync.png" id="11_07ekw"]
[ext_resource type="Texture2D" uid="uid://ci1vdlffkh0l7" path="res://Scenes/Multiplayer/EOSG.png" id="12_qn5i2"]

[node name="Network" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_c676d")

[node name="Enet" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_idffg")

[node name="Steam" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_cj1w6")

[node name="Nakama" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_8altb")

[node name="GDS" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_xp8ec")

[node name="EOS" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_u7543")

[node name="MPHUD" type="Panel" parent="." groups=["MPHUD"]]
unique_name_in_owner = true
light_mask = 2
visibility_layer = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_5wdof")

[node name="HSplitContainer" type="HSplitContainer" parent="MPHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="VBoxContainer2" type="VBoxContainer" parent="MPHUD/HSplitContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MPHUD/HSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MPHUD/HSplitContainer/VBoxContainer2/Control"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 648.0

[node name="TabBar" type="TabBar" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0
tab_alignment = 1
scrolling_enabled = false
tab_count = 5
tab_0/icon = ExtResource("8_k6k0w")
tab_1/icon = ExtResource("9_4e382")
tab_2/icon = ExtResource("10_jfr3w")
tab_2/disabled = true
tab_3/icon = ExtResource("11_07ekw")
tab_3/disabled = true
tab_4/icon = ExtResource("12_qn5i2")
tab_4/disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -21.5
offset_right = 22.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="RichTextLabel" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
bbcode_enabled = true
text = "Name"
fit_content = true
scroll_active = false

[node name="Host" type="Button" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Search" type="TextEdit" parent="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Name/ID Search"
context_menu_enabled = false
scroll_fit_content_height = true

[node name="Control" type="Control" parent="MPHUD/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lobby" type="Panel" parent="MPHUD/HSplitContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lobbyinfo" type="ItemList" parent="MPHUD/HSplitContainer/Control/Lobby"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 150.0
grow_vertical = 2
size_flags_horizontal = 3
focus_mode = 0
allow_search = false

[node name="LobbyName" type="ItemList" parent="MPHUD/HSplitContainer/Control/Lobby"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 150.0
offset_right = 450.0
grow_vertical = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="LobbyPlayers" type="ItemList" parent="MPHUD/HSplitContainer/Control/Lobby"]
clip_contents = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 180.0
offset_right = 210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="LobbyId" type="ItemList" parent="MPHUD/HSplitContainer/Control/Lobby"]
layout_mode = 2
offset_left = 630.0
offset_right = 840.0
offset_bottom = 588.0
size_flags_horizontal = 3
focus_mode = 0

[connection signal="tab_changed" from="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MPHUD/HSplitContainer/VBoxContainer2/Control/VBoxContainer/HBoxContainer/Panel/VBoxContainer/Join" to="." method="_on_join_pressed"]
